--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= stylesheet_link_tag "scaffold", "application" %>
   <%= auto_discovery_link_tag :atom, feed_path %>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <title>Blog</title>
+  <title><%= blog_title %></title>
 </head>
 <body>
 <div id="wrapper">
