--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -11,7 +11,7 @@
         </div>
         <% if current_user %>
         <div class="delete_comment">
-            <%= link_to 'Destroy', [@post, comment], :confirm => 'Are you sure?', :method => :delete %>
+            <%= link_to t('common.destroy'), [@post, comment], :confirm => t("comments.confirm"), :method => :delete %>
         </div>
         <% end %>
     </div>
