--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,11 +1,12 @@
 <div class="post">
 <h2><%= link_to post.title, "/#{post.url}" %></h2>
     <div class="aauthor_meta">
-        <span class="author"><span class="meta_name">Author:</span> <%= post.user.show_name %></span>, 
-        <span class="date">Post at: <%= post.created_at.strftime("%Y-%m-%d") -%></span>
+        <span class="author"><span class="meta_name"><%= t('post.author') -%>:</span> <%= post.user.show_name %></span>, 
+        <span class="date"><%= t("post.at") -%>: <%= post.created_at.strftime("%Y-%m-%d") -%></span>
         <% if current_user %>
         <span class="edit_meta">
-         | <%= link_to "Edit", edit_post_path(post) %>
+         | <%= link_to t('common.edit'), edit_post_path(post) %>,
+         <%= link_to t('common.destroy'), post_path(post), :method => "delete", :confirm => t('comments.confirm') %>
         </span>
         <% end %>
     </div>
@@ -15,16 +16,16 @@
     <div class="post_meta">
         <% if post.tags.size > 0 %>
         <span class="tags">
-            <span class="meta_name">Tags:</span> <%= render :partial => "shared/tag", :collection => post.tags -%>
+            <span class="meta_name"><%= t('common.tags') -%>:</span> <%= render :partial => "shared/tag", :collection => post.tags -%>
         </span>
         <% else %>
-        <span class="tags">No tags.</span>
+        <span class="tags"><%= t('post.no_tag') -%></span>
         <% end %>
         <span class="comment_info">
             <% unless post.comments.size > 0 %>
-             | <%= link_to "Be the first to comment.", "/#{post.url}#comment_form" %>
+             | <%= link_to t('post.be_first'), "/#{post.url}#comment_form" %>
             <% else %>
-             | <%= link_to pluralize(post.comments.count, "comment"), "/#{post.url}#comments" %>
+             | <%= link_to t("common.comment", :count => post.comments.count), "/#{post.url}#comments" %>
             <% end %>
         </span>
     </div>
