--- a/app/views/posts/index.js.erb
+++ b/app/views/posts/index.js.erb
@@ -3,7 +3,7 @@ if(<%=  @posts.count > 0 %>) {
     $$(".pagination")[0].hide();
 }
 else {
-    $("posts_list").update("<p id='not_found'>Nothing found.</p>");
+    $("posts_list").update("<p id='not_found'><%= t('post.not_found') -%></p>");
     $$(".pagination")[0].hide();
 }
 
