--- a/app/views/tags/_post.html.erb
+++ b/app/views/tags/_post.html.erb
@@ -1,14 +1,14 @@
 <div class="tag_post">
     <h3><%= link_to post.title, "/#{post.url}" %></h3>
     <div class="author_meta">
-        <span class="author"><span class="meta_name">Author:</span> <%= post.user.show_name %></span>, 
-        <span class="date">Post at: <%= post.created_at.strftime("%Y-%m-%d") -%></span>
+        <span class="author"><span class="meta_name"><%= t('post.author') -%>:</span> <%= post.user.show_name %></span>, 
+        <span class="date"><%= t('post.at') -%>: <%= post.created_at.strftime("%Y-%m-%d") -%></span>
         <span class="comment_info">
-            <%= link_to pluralize(post.comments.count, "comment"), "/#{post.url}#comments" %>
+            <%= link_to t("common.comment", :count => post.comments.count), "/#{post.url}#comments" %>
         </span>
         <% if current_user %>
         <span class="edit_meta">
-         | <%= link_to "Edit", edit_post_path(post) %>
+         | <%= link_to t('common.edit'), edit_post_path(post) %>
         </span>
         <% end %>
     </div>
