--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -1,22 +1,6 @@
-<h1>Listing tags</h1>
-
-<table>
-  <tr>
-    <th>Name</th>
-    <th>Url</th>
-  </tr>
-
-<% @tags.each do |tag| %>
-  <tr>
-    <td><%=h tag.name %></td>
-    <td><%=h tag.url %></td>
-    <td><%= link_to 'Show', tag %></td>
-    <td><%= link_to 'Edit', edit_tag_path(tag) %></td>
-    <td><%= link_to 'Destroy', tag, :confirm => 'Are you sure?', :method => :delete %></td>
-  </tr>
-<% end %>
-</table>
-
-<br />
-
-<%= link_to 'New tag', new_tag_path %>
+<div id="tag_posts">
+    <h2>Tag cloud</h2>
+    <p>
+        Building...
+    </p>
+</div>
