--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -251,3 +251,17 @@ input#post_title {
 .pagination a:hover {
     text-decoration: underline;
 }
+
+.author_meta, .post_meta {
+    color:#999;
+    font-size: 10px;
+}
+
+.meta_name {
+    font-weight: bold;
+}
+
+.tag_post .post_content {
+    padding-top: 6px;
+    padding-bottom: 4px;
+}
