--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 <body>
 <div id="wrapper">
     <div id="header">
-        <h1 id="site_name"><%= link_to(image_tag('head_logo.png'), root_path) -%></h1><div id="subtitle"><%= subtitle -%></div>
+        <h1 id="site_name"><%= link_to(image_tag('head_logo.jpg'), root_path) -%></h1><div id="subtitle"><%= subtitle -%></div>
     </div>
     <div id="content">
         <div id="info_area">
